small fix to project selector option list - remove overflow scroll

--- a/app/client/components/ProjectSelector/ProjectSelector.css
+++ b/app/client/components/ProjectSelector/ProjectSelector.css
@@ -44,7 +44,6 @@
   color: black;
   border: 1px solid black;
   border-radius: 0 0 5px 5px;
-  overflow-y: scroll;
   border: none;
   background: #4e4c88;
   color: white;
